--- a/applications/object_detection_torch/CMakeLists.txt
+++ b/applications/object_detection_torch/CMakeLists.txt
@@ -66,8 +66,6 @@ target_link_libraries(object_detection_torch
     holoscan::ops::inference
     holoscan::ops::inference_processor
     holoscan::ops::holoviz
-    holoscan::infer
-    $<TARGET_NAME_IF_EXISTS:holoscan::holoinfer_utils>
     $<TARGET_NAME_IF_EXISTS:holoscan::aja>
 )
 
@@ -78,6 +76,14 @@ if(holoscan_VERSION GREATER 3.5)
     torchvision::torchvision
     "-Wl,--no-as-needed $<TARGET_PROPERTY:Python3::Python,IMPORTED_LOCATION> $<TARGET_PROPERTY:torchvision::torchvision,IMPORTED_LOCATION> -Wl,--as-needed"
   )
+endif()
+
+if("${holoscan_VERSION}" VERSION_GREATER_EQUAL "3.7")
+  # holoscan::holoinfer_utils is directly available in Holoscan SDK 3.7 and later
+  target_link_libraries(object_detection_torch PRIVATE holoscan::holoinfer_utils)
+else()
+  # "holoscan_utils.hpp" is exposed through holoscan::infer in Holoscan SDK 3.6 and earlier
+  target_link_libraries(object_detection_torch PRIVATE holoscan::infer)
 endif()
 
 # Download the cars sample data
