App: Fix missing object_detection_torch header (#1144)
* App: Fix missing object_detection_torch header

Apply fix for upcoming Holoscan SDK v3.7, which moves the
"holoscan::inference::node_type" definition from the "holoscan::infer"
target into the "holoscan::holoinfer_util" target

Backwards compatible with <=v3.6

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

* Align target linkage by version check per offline discussion

For consistency with multiai_ultrasound check implementation

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

---------

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/CMakeLists.txt
+++ b/applications/object_detection_torch/CMakeLists.txt
@@ -78,6 +78,14 @@ if(holoscan_VERSION GREATER 3.5)
   )
 endif()
 
+if("${holoscan_VERSION}" VERSION_GREATER_EQUAL "3.7")
+  # holoscan::holoinfer_utils is directly available in Holoscan SDK 3.7 and later
+  target_link_libraries(object_detection_torch PRIVATE holoscan::holoinfer_utils)
+else()
+  # "holoscan_utils.hpp" is exposed through holoscan::infer in Holoscan SDK 3.6 and earlier
+  target_link_libraries(object_detection_torch PRIVATE holoscan::infer)
+endif()
+
 # Download the cars sample data
 option(HOLOHUB_DOWNLOAD_DATASETS "Download datasets" ON)
 if(HOLOHUB_DOWNLOAD_DATASETS)
