Fix operator linking in video streaming demo applications
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming_demo_enhanced/video_streaming_demo_client/cpp/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/video_streaming_demo_client/cpp/CMakeLists.txt
@@ -18,7 +18,7 @@ target_link_libraries(streaming_client_demo_enhanced
   holoscan::ops::video_stream_replayer
   holoscan::ops::v4l2
   holoscan::ops::format_converter
-  holoscan::ops::video_streaming
+  holoscan::ops::streaming_client_enhanced
   holoscan::data_loggers::basic_console_logger
   CUDA::cudart
   CUDA::cuda_driver
