--- a/applications/video_streaming_demo_enhanced/video_streaming_demo_client/cpp/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/video_streaming_demo_client/cpp/CMakeLists.txt
@@ -4,6 +4,11 @@
 cmake_minimum_required(VERSION 3.20)
 project(streaming_client_demo_enhanced CXX)
 
+# Check if this application should be built
+if(NOT APP_video_streaming_demo_enhanced)
+  return()
+endif()
+
 find_package(holoscan 1.0 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
