Add server test to CMakeLists.txt
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming_demo_enhanced/video_streaming_demo_server/cpp/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/video_streaming_demo_server/cpp/CMakeLists.txt
@@ -145,6 +145,24 @@ add_custom_target(streaming_server_demo_enhanced_deps
 )
 add_dependencies(streaming_server_demo_enhanced streaming_server_demo_enhanced_deps)
 
+# Add testing
+if(BUILD_TESTING)
+  add_test(NAME streaming_server_demo_enhanced_cpp_test
+           COMMAND streaming_server_demo_enhanced
+                   --config ${CMAKE_CURRENT_BINARY_DIR}/streaming_server_demo.yaml
+           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+  set_tests_properties(streaming_server_demo_enhanced_cpp_test PROPERTIES
+                       PASS_REGULAR_EXPRESSION "StreamingServerResource started successfully"
+                       FAIL_REGULAR_EXPRESSION "[^a-z]Error;ERROR;Failed")
+endif()
 
+# Install application and dependencies into the install/ directory for packaging
+install(
+  TARGETS streaming_server_demo_enhanced
+  DESTINATION bin/video_streaming_demo_enhanced/cpp
+)
 
-
+install(
+  FILES streaming_server_demo.yaml
+  DESTINATION bin/video_streaming_demo_enhanced/cpp
+)
