--- a/applications/video_streaming_demo_enhanced/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/CMakeLists.txt
@@ -46,11 +46,74 @@ if(BUILD_TESTING)
   
   # Add integration test for video streaming demo
   add_test(NAME video_streaming_integration_test
-           COMMAND bash "${CMAKE_BINARY_DIR}/integration_test.sh"
+           COMMAND bash -c "
+             echo '=== Custom Integration Test ==='
+             echo 'Starting server and client in same container...'
+             
+             # Start server in background
+             echo 'Starting streaming server...'
+             ./bin/streaming_server_demo_enhanced --config applications/video_streaming_demo_enhanced/video_streaming_demo_server/cpp/streaming_server_demo.yaml &
+             SERVER_PID=\$!
+             
+             # Wait for server to start
+             echo 'Waiting for server to initialize...'
+             sleep 10
+             
+             # Check if server is listening
+             echo 'Checking if server is listening on port 48010...'
+             for i in {1..30}; do
+               if netstat -tlnp 2>/dev/null | grep -q ':48010'; then
+                 echo '✓ Server is listening on port 48010'
+                 SERVER_SUCCESS=1
+                 break
+               else
+                 echo \"Waiting for server to start... (attempt \$i/30)\"
+                 sleep 2
+               fi
+             done
+             
+             if [ \$SERVER_SUCCESS -eq 1 ]; then
+               echo '✓ Server started successfully'
+               
+               # Run client test
+               echo 'Starting streaming client...'
+               timeout 60s ./bin/streaming_client_demo_enhanced --config applications/video_streaming_demo_enhanced/video_streaming_demo_client/cpp/streaming_client_demo_replayer.yaml
+               CLIENT_EXIT_CODE=\$?
+               
+               if [ \$CLIENT_EXIT_CODE -eq 0 ]; then
+                 echo '✓ Client test completed successfully'
+                 CLIENT_SUCCESS=1
+               elif [ \$CLIENT_EXIT_CODE -eq 124 ]; then
+                 echo '✗ Client test timed out'
+                 CLIENT_SUCCESS=0
+               else
+                 echo \"✗ Client test failed with exit code \$CLIENT_EXIT_CODE\"
+                 CLIENT_SUCCESS=0
+               fi
+             else
+               echo '✗ Server failed to start'
+               CLIENT_SUCCESS=0
+             fi
+             
+             # Clean up
+             echo 'Cleaning up server process...'
+             kill -TERM \$SERVER_PID 2>/dev/null || true
+             sleep 2
+             kill -KILL \$SERVER_PID 2>/dev/null || true
+             
+             # Overall result
+             if [ \$SERVER_SUCCESS -eq 1 ] && [ \$CLIENT_SUCCESS -eq 1 ]; then
+               echo '✓ Integration test PASSED'
+               exit 0
+             else
+               echo '✗ Integration test FAILED'
+               exit 1
+             fi
+           "
            WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
   
   set_tests_properties(video_streaming_integration_test PROPERTIES
-                       TIMEOUT 120
+                       TIMEOUT 300
                        PASS_REGULAR_EXPRESSION "Integration test PASSED"
                        FAIL_REGULAR_EXPRESSION "Integration test FAILED")
 endif()
