--- a/applications/gstreamer/gst_to_holoviz/CMakeLists.txt
+++ b/applications/gstreamer/gst_to_holoviz/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(gstreamer-tutorial C CXX)
+project(gstreamer-applications C CXX)
 
 # Set C and C++ standards
 set(CMAKE_C_STANDARD 99)
@@ -23,38 +23,38 @@ pkg_check_modules(GSTREAMER_VIDEO REQUIRED gstreamer-video-1.0)
 include_directories(${GSTREAMER_INCLUDE_DIRS})
 include_directories(${GSTREAMER_BASE_INCLUDE_DIRS})
 include_directories(${GSTREAMER_VIDEO_INCLUDE_DIRS})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../operators/gstreamer)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../operators/gstreamer)
 
 # Add the operators/gstreamer subdirectory
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../operators/gstreamer ${CMAKE_CURRENT_BINARY_DIR}/operators_gstreamer)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../operators/gstreamer ${CMAKE_CURRENT_BINARY_DIR}/operators_gstreamer)
 
 # Add compiler definitions
 add_definitions(${GSTREAMER_CFLAGS_OTHER})
 add_definitions(${GSTREAMER_BASE_CFLAGS_OTHER})
 add_definitions(${GSTREAMER_VIDEO_CFLAGS_OTHER})
 
-# Create executables
-add_executable(basic-tutorial-1 basic-tutorial-1.cpp)
-add_executable(basic-tutorial-2 basic-tutorial-2.cpp)
-add_executable(basic-tutorial-3 basic-tutorial-3.cpp)
-add_executable(playback-tutorial-1 playback-tutorial-1.cpp)
+# Create executable
+add_executable(gst-to-holoviz gst_to_holoviz.cpp)
 
-# Link libraries for executables
-target_link_libraries(basic-tutorial-1 ${GSTREAMER_LIBRARIES})
-target_link_libraries(basic-tutorial-2 ${GSTREAMER_LIBRARIES})
-target_link_libraries(basic-tutorial-3 ${GSTREAMER_LIBRARIES})
-target_link_libraries(playback-tutorial-1 ${GSTREAMER_LIBRARIES})
+# Link libraries
+target_link_libraries(gst-to-holoviz
+    ${GSTREAMER_LIBRARIES}
+    ${GSTREAMER_BASE_LIBRARIES}
+    ${GSTREAMER_VIDEO_LIBRARIES}
+    holoscan_gstreamer_sink
+    holoscan::core
+    holoscan::ops::holoviz)
 
 # Set library directories
 link_directories(${GSTREAMER_LIBRARY_DIRS})
 link_directories(${GSTREAMER_BASE_LIBRARY_DIRS})
 link_directories(${GSTREAMER_VIDEO_LIBRARY_DIRS})
 
-# Set compile flags for executables
-target_compile_options(basic-tutorial-1 PRIVATE ${GSTREAMER_CFLAGS_OTHER})
-target_compile_options(basic-tutorial-2 PRIVATE ${GSTREAMER_CFLAGS_OTHER})
-target_compile_options(basic-tutorial-3 PRIVATE ${GSTREAMER_CFLAGS_OTHER})
-target_compile_options(playback-tutorial-1 PRIVATE ${GSTREAMER_CFLAGS_OTHER})
+# Set compile flags
+target_compile_options(gst-to-holoviz PRIVATE 
+    ${GSTREAMER_CFLAGS_OTHER} 
+    ${GSTREAMER_BASE_CFLAGS_OTHER} 
+    ${GSTREAMER_VIDEO_CFLAGS_OTHER})
 
 # Platform-specific settings
 if(APPLE)
@@ -62,17 +62,15 @@ if(APPLE)
     find_library(FOUNDATION_FRAMEWORK Foundation)
     find_library(COCOA_FRAMEWORK Cocoa)
     if(FOUNDATION_FRAMEWORK AND COCOA_FRAMEWORK)
-        target_link_libraries(basic-tutorial-1 ${FOUNDATION_FRAMEWORK} ${COCOA_FRAMEWORK})
-        target_link_libraries(basic-tutorial-2 ${FOUNDATION_FRAMEWORK} ${COCOA_FRAMEWORK})
-        target_link_libraries(basic-tutorial-3 ${FOUNDATION_FRAMEWORK} ${COCOA_FRAMEWORK})
-        target_link_libraries(playback-tutorial-1 ${FOUNDATION_FRAMEWORK} ${COCOA_FRAMEWORK})
+        target_link_libraries(gst-to-holoviz ${FOUNDATION_FRAMEWORK} ${COCOA_FRAMEWORK})
     endif()
 endif()
 
-# Install targets (optional)
-install(TARGETS basic-tutorial-1 basic-tutorial-2 basic-tutorial-3 playback-tutorial-1 DESTINATION bin)
+# Install target
+install(TARGETS gst-to-holoviz DESTINATION bin)
 
 # Print some information
 message(STATUS "GStreamer include dirs: ${GSTREAMER_INCLUDE_DIRS}")
 message(STATUS "GStreamer libraries: ${GSTREAMER_LIBRARIES}")
 message(STATUS "GStreamer library dirs: ${GSTREAMER_LIBRARY_DIRS}")
+
