--- a/.github/workflows/check_urls.yml
+++ b/.github/workflows/check_urls.yml
@@ -46,6 +46,7 @@ jobs:
           --verbose
           --no-progress
           --root-dir=${{ github.workspace }}
+          --exclude='${{ github.workspace }}/doc/website/overrides/'
           --remap='(file://.*)/holoscan-sdk/(.*) https://github.com/nvidia-holoscan/holoscan-sdk/tree/main/$2'
           ${{ steps.changed-files.outputs.changed_files_list }}
         fail: true
@@ -63,6 +64,7 @@ jobs:
           --verbose
           --no-progress
           --root-dir=${{ github.workspace }}
+          --exclude='${{ github.workspace }}/doc/website/overrides/'
           --remap='(file://.*)/holoscan-sdk/(.*) https://github.com/nvidia-holoscan/holoscan-sdk/tree/main/$2'
           '${{ github.workspace }}/**/*.md'
           '${{ github.workspace }}/**/*.html'
